Switching from info screen to map screen no longer crashes
This was done by using the Parcel library to avoid the boiler plate needed to make Tour and TourLocation parcelable

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/Theme.EdinburghTourApp">
         <activity
             android:name=".ShowLocationInfoActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".SelectTourActivity"
             android:exported="true" />
