--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,15 @@
 
         <activity
             android:name=".ShowLocationInfoActivity"
-            android:exported="false" />
+            android:exported="true" />
 
         <activity android:name=".ProfileActivity" />
+
         <activity android:name=".SignupActivity" />
+
+        <activity android:name=".TourMenuActivity"
+            android:exported="true">
+        </activity>
 
         <activity
             android:name=".AuthActivity"
