--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,28 +13,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TourApp">
-
+        <activity
+            android:name=".MapsActivity"
+            android:exported="false" />
         <activity
             android:name=".ShowLocationInfoActivity"
             android:exported="true" />
-
         <activity android:name=".ProfileActivity" />
-
         <activity android:name=".SignupActivity" />
-
-        <activity android:name=".TourMenuActivity"
-            android:exported="true">
-        </activity>
-
+        <activity
+            android:name=".TourMenuActivity"
+            android:exported="true"></activity>
         <activity
             android:name=".AuthActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
