--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TourApp">
+        android:theme="@style/Theme.TourApp" >
         <activity
             android:name=".MapsActivity"
             android:exported="false" />
@@ -23,10 +23,11 @@
         <activity android:name=".SignupActivity" />
         <activity
             android:name=".TourMenuActivity"
-            android:exported="true"></activity>
+            android:exported="true" >
+        </activity>
         <activity
             android:name=".AuthActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
