--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EdinburghTourApp">
         <activity
+            android:name=".SavedToursActivity"
+            android:exported="false" />
+        <activity
             android:name=".SignupActivity"
             android:exported="true" />
         <activity
@@ -48,8 +51,7 @@
         <activity
             android:name=".MapsActivity"
             android:exported="true"
-            android:label="@string/title_activity_maps">
-        </activity>
+            android:label="@string/title_activity_maps"></activity>
     </application>
 
 </manifest>
